# SPL-Ass1

./: Agent.cpp  Agent.h  CMakeLists.txt  ContactTracer.cpp  CycleTree.cpp  Graph.cpp  Graph.h  MaxRankTree.cpp  RootTree.cpp  Session.cpp  Session.h  Tree.cpp  Tree.h  Virus.cpp  config1.json  main.cpp  makefile  output.json
include/: Agent.h  Graph.h  Session.h  Tester.h  Tree.h
src/: Agent.cpp  ContactTracer.cpp  CycleTree.cpp  Graph.cpp  MaxRankTree.cpp  RootTree.cpp  Session.cpp  Tree.cpp  Virus.cpp  main.cpp  mainold.cpp
