cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 11)

add_executable(SPL-Ass1 src/main.cpp src/maintest.cpp src/Tester.cpp src/Agent.cpp src/Graph.cpp src/Session.cpp src/RootTree.cpp src/MaxRankTree.cpp src/CycleTree.cpp src/Tree.cpp src/ContactTracer.cpp src/Virus.cpp)